# WCI-1

./: .gitignore  CMakeLists.txt  README.md
chap1/: CMakeLists.txt  list.c
chap2/: CMakeLists.txt  comments.in  common.h  compact.c  error.c  error.h  errors.in  hello.crunched  scanner.c  scanner.h  token1.c  token2.c
chap3/: CMakeLists.txt  crunch.c  symtab.c  symtab.h  uncrunch.c  xref.c
chap4/: CMakeLists.txt  calc.c  calc.in  postfix.c  postfix.in
chap5/: CMakeLists.txt  expr.c  parser.h  scanner.c  scanner.h  stmt.c  syntax1.c  syntax1.in
chap6/: CMakeLists.txt  analyze.c  analyze.in  decl.c  expr.c  parser.h  stmt.c  symtab.c  symtab.h  syntax2.c  syntax2.in
chap7/: CMakeLists.txt  decl.c  expr.c  routine.c  rtnerr.pas  scopeerr.pas  standard.c  stmt.c  symtab.c  symtab.h  syntax3.c
chap8/: CMakeLists.txt  expr.c  ppdecl.c  pprint.c  pprint.h  ppstmt.c  routine.c  scanner.c  stmt.c  translat.pas
